manifest/loki/loki-gateway-ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    meta.helm.sh/release-name: loki
    meta.helm.sh/release-namespace: loki
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: loki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: loki
    app.kubernetes.io/version: 3.5.0
    helm.sh/chart: loki-6.30.0
  name: loki-gateway-tailscale
  namespace: loki
spec:
  ingressClassName: "traefik-tailscale"
  rules:
  - host: loki-gateway.tailscale.oky.pke.str08.net
    http:
      paths:
      - backend:
          service:
            name: loki-gateway
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - loki-gateway.tailscale.oky.pke.str08.net
    secretName: loki-gateway.tailscale.oky.pke.str08.net-dns01
